# stat_cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
data/iris/: README.md  X_test  X_train  generate_iris.py  y_test  y_train
data/mnist/: README.md
stat/: CMakeLists.txt
stat/include/: KNN.h  Math.h  Model.h  NaiveBayes.h  Perceptron.h  Stat.h  Types.h  Utils.h
test/: CMakeLists.txt  test_LoadData.cpp  test_Math.cpp  test_Model.cpp
